--- a/template.ipynb
+++ b/template.ipynb
@@ -229,7 +229,9 @@
    ],
    "source": [
     "home_values = pd.read_csv('homevalue.csv')\n",
-    "home_values.head()"
+    "income = pd.read_csv('median_income.csv')\n",
+    "home_values.head()\n",
+    "income.head()"
    ]
   },
   {
