--- a/zahabiya.ipynb
+++ b/zahabiya.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "0ebd0e4d-11a6-42bf-a267-6a5f10ab0a62",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "00458514-934d-4c53-8166-7ae82db7deef",
    "metadata": {},
    "outputs": [
@@ -243,21 +243,21 @@
        "[5 rows x 306 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "home_values_dataset = pd.read_csv('zillow_data.csv')\n",
-    "income = pd.read_csv('median_income - Sheet1.csv')\n",
+    "home_values_dataset = pd.read_csv('homevalue.csv')\n",
+    "income = pd.read_csv('median_income.csv')\n",
     "home_values_dataset.columns.values[5:] = pd.to_datetime(home_values_dataset.columns[5:])\n",
     "home_values_dataset.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "ceb03132-d02c-4e80-aad3-0efc67f89ac2",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "13f418f6-fead-4de9-a092-7dc571f546f9",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "ff3d19ba-a183-4c5b-b08c-3349bc9d9f4e",
    "metadata": {},
    "outputs": [
