--- a/ProgressReportFinal(1).ipynb
+++ b/ProgressReportFinal(1).ipynb
@@ -432,6 +432,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "homevalues_dataset() and income_dataset_ML() function prepares the homevalues and income data to feed into the clustering algorithm. Homevalues of all the regions of each state are averaged so that we can get one homevalue per state for each year 2000 to 2023. And in the income dataset, a separate column has been introduced for the State Codes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **K-Means Clustering**\n",
     "Since there were no labeled outcomes or predefined affordability categories in the data, we chose unsupervised learning, specifically K-Means clustering, to let the data reveal natural groupings. K-Means is effective for partitioning data based on feature similarity and is well-suited to exploratory segmentation problems like this. To capture both current and long-term affordability trends, we used the following four features per state:\n",
     "- Median Home Value in 2023\n",
@@ -439,7 +446,7 @@
     "- Median Income in 2023\n",
     "- Income Growth Rate (2000–2023)\n",
     "\n",
-    "All features are normalized using standard scaling to ensure equal weighting in the clustering algorithm."
+    "clustering() function is doing all the above mentioned processing and returning a dataframe for clustering. All features of the dataframe are normalized using standard scaling to ensure equal weighting in the clustering algorithm."
    ]
   },
   {
