--- a/ProgressReportFinal(1).ipynb
+++ b/ProgressReportFinal(1).ipynb
@@ -181,6 +181,7 @@
     }
    ],
    "source": [
+    "This function cleans the data by adding abbreviations to the states and changes the format to long format. It then merges the income dataset and homevalues dataset and present it in a heatmap."
     "import all_functions\n",
     "all_functions.showHeatMap(home_values_dataset,income)"
    ]
