--- a/ProgressReportFinal(1).ipynb
+++ b/ProgressReportFinal(1).ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,12 @@
     }
    ],
    "source": [
-    "This function cleans the data by adding abbreviations to the states and changes the format to long format. It then merges the income dataset and homevalues dataset and present it in a heatmap."
+    "\"\"\"\n",
+    "This functions adds state abbreviations and cleans the datasets by changing the format to long. \n",
+    "It then merges the home_value and income datasets and calulates the price to income ratio by\n",
+    "dividing the median house price by the median inome in each state for each year.\n",
+    "Then presents the data in a heatmap showcasing affordability in each state.\n",
+    "\"\"\"\n",
     "import all_functions\n",
     "all_functions.showHeatMap(home_values_dataset,income)"
    ]
