--- a/ProgressReportFinal(1).ipynb
+++ b/ProgressReportFinal(1).ipynb
@@ -27,19 +27,18 @@
    },
    "source": [
     "# **2. Any Changes:**\n",
-    "### a discussion whether your scope has changed since the check-in proposal slides. \n",
     "### What did you aim to do that you will not do and what have you added to the project?\n",
     "\n",
     "Since our initial proposal, we have made a few key adjustments:\n",
     "\n",
-    "###  **Additions:**\n",
-    "- We added a **machine learning component**, using linear regression to predict home prices and evaluate performance against a baseline model\n",
-    "- We incorporated a **hypothesis test** to examine whether income growth correlates with improved housing affordability\n",
-    "- We visualized affordability over time using a **heatmap**, which gave strong regional insights\n",
+    "###  *Additions:*\n",
+    "- We added a machine learning component, using KMeans clustering to group states based on affordability, income growth and home value trends. \n",
+    "- We incorporated hypotheses to examine whether income growth correlated with the improved housing affordability.\n",
+    "- We visualized affordability over time using the heatmap which gave us strong regional insights.\n",
     "\n",
-    "###  **What We Didn't End Up Doing:**\n",
-    "- Initially, we considered incorporating **other economic indicators** like interest rates or inflation, but we narrowed our focus to just income and home prices to maintain clarity and depth\n",
-    "- We also did not build an interactive web dashboard, which was considered during brainstorming, in order to prioritize deeper analysis\n"
+    "\n",
+    "###  *What We Didn't End Up Doing:*\n",
+    "- We decided not to include other economic indicators or an interactive dashboard in order to focus on depth and clarity"
    ]
   },
   {
@@ -4946,31 +4945,24 @@
     "# ***7. Reflection: a discussion of the following:***\n",
     "\n",
     "### o What is hardest part of the project that you’ve encountered so far?\n",
-    "- The most challenging part of the project was cleaning and aligning the two datasets, which had different formats:\n",
-    "\n",
-    "- The home value dataset was monthly and used state abbreviations\n",
-    "\n",
-    "- The income dataset was yearly and used full state names We had to reshape the data, create a state mapping, aggregate monthly data into yearly averages, and ensure accurate merging. Missing values and inconsistent time coverage added to the complexity.\n",
+    "- Cleaning and aligning the datasets was challenging due to different formats and time scales.\n",
+    "- Selecting a machine learning method that fit our problem took thoughtful consideration.\n",
+    "- Applying clustering required careful feature selection and data scaling.\n",
+    "- Interpreting and validating the clusters made the ML component the most demanding part of the project.\n",
     "\n",
     "### o What are your initial insights?\n",
-    "- Home prices are rising faster than income in almost every state, especially since 2020\n",
+    "- Average home prices are much higher than incomes in all states, especially in places like HI, CA, and MA, standing out as the least affordable.\n",
+    "- Since 2020, prices have surged while income growth stayed modest, widening the affordability gap.\n",
+    "- These patterns confirm that rising income alone is not enough to improve housing affordability, especially in high cost regions.\n",
     "\n",
-    "- States like California, Hawaii, and Massachusetts are significantly less affordable than the national average\n",
-    "\n",
-    "- Income growth does not reliably lead to improved affordability, confirming our initial hypothesis\n",
-    "\n",
-    "- Regional variation is stark — some low-income states are actually more affordable than high-income ones\n",
     "\n",
     "### o Are there any concrete results you can show at this point? If not, why not?\n",
     "Yes, we have several:\n",
     "\n",
-    "- A national trend line showing the gap between income and home prices widening\n",
-    "\n",
+    "- We cleaned and merged income and home value data to calculate price-to-income ratios.\n",
     "- A heatmap of affordability by state and year, showing where affordability has worsened\n",
+    "- KMeans clustering grouped states into affordability categories, uncovering patterns beyond basic averages.\n",
     "\n",
-    "- A machine learning model that predicts home values with lower error than a naive baseline\n",
-    "\n",
-    "- A hypothesis test plot confirming that higher income growth doesn't correlate with improved affordability\n",
     "\n",
     "### o Going forward, what are the current biggest problems you’re facing?\n",
     "- Our current model is limited in scope — it only uses income and year. While it performs better than a baseline, its predictive power could be stronger with more variables (e.g., mortgage rates, population growth, construction rates)\n",
@@ -5035,9 +5027,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:cs418env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cs418env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
