--- a/ProgressReportFinal(1).ipynb
+++ b/ProgressReportFinal(1).ipynb
@@ -4967,14 +4967,14 @@
     "### o Going forward, what are the current biggest problems you’re facing?\n",
     "- Our current model is limited in scope — it only uses income and year. While it performs better than a baseline, its predictive power could be stronger with more variables (e.g., mortgage rates, population growth, construction rates)\n",
     "\n",
-    "- Visualizations are effective but need polishing for presentation\n",
+    "- Currently it would most likely be making the 2nd machine learning to analyze the data, and making sure the first ML is adequate. Visualizations are effective but need polishing for presentation\n",
     "\n",
     "### o Do you think you are on track with your project? If not, what parts do you need to dedicate more time to?\n",
     "Yes, we are on track:\n",
     "\n",
     "- We've completed the major parts of cleaning, merging, visualizing, and modeling\n",
     "\n",
-    "- What remains is improving the visual design, summarizing findings, and wrapping the project into a clean presentation or report\n",
+    "- What remains is improving the visual design, summarizing & explaining findings, and wrapping the project into a clean presentation or report. Make 1 more ML,figure out 2 final and distinct visual results, picking one extra from either category ML or Visualization.\n",
     "\n",
     "### o Given your initial exploration of the data, is it worth proceeding with yourproject, why? \n",
     "\n",
